Backports
Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
---|---|---|---|---|---|---|
JDK-2177201 | 7 | Vladimir Kozlov | P3 | Closed | Fixed | b34 |
JDK-2172722 | 6u14 | Vladimir Kozlov | P3 | Resolved | Fixed | b01 |
Description
After 6723160 changes nsk/stress/jck12a/jck12a010 failed on all platforms:
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/tmp/jprt-jprtadm/P1/B/230701.kvn/source/src/share/vm/opto/loopnode.hpp:634), pid=20237, tid=1086507360
# Error: assert(n != __null,"Bad immediate dominator info.")
#
# Java VM: OpenJDK 64-Bit Server VM (14.0-b01-2008-07-16-230701.kvn.6723160-fastdebug compiled mode linux-amd64 )
# If you would like to submit a bug report, please visit:
# http://java.sun.com/webapps/bugreport/crash.jsp
#
--------------- T H R E A D ---------------
Current thread (0x0000002abee93800): JavaThread "CompilerThread1" daemon [_thread_in_native, id=20251, stack(0x0000000040b2c000,0x0000000040c2d000)]
Stack: [0x0000000040b2c000,0x0000000040c2d000], sp=0x0000000040c25b50, free space=998k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0xa4e622];; _ZN7VMError14report_and_dieEv+0x262
V [libjvm.so+0x4071fe];; _Z24report_assertion_failurePKciS0_+0x6e
V [libjvm.so+0x77f109];; _ZNK14PhaseIdealLoop14idom_no_updateEP4Node+0xd9
V [libjvm.so+0x792fb0];; _ZN14PhaseIdealLoop20build_loop_late_postEP4NodePKS_+0x230
V [libjvm.so+0x7929ca];; _ZN14PhaseIdealLoop15build_loop_lateER9VectorSetR9Node_ListR10Node_StackPKS_+0xda
V [libjvm.so+0x78c7c3];; _ZN14PhaseIdealLoopC1ER12PhaseIterGVNPKS_b+0x8c3
V [libjvm.so+0x3a111a];; _ZN7Compile8OptimizeEv+0x1ea
V [libjvm.so+0x39c2ad];; _ZN7CompileC1EP5ciEnvP10C2CompilerP8ciMethodibb+0x8fd
V [libjvm.so+0x2cda6c];; _ZN10C2Compiler14compile_methodEP5ciEnvP8ciMethodi+0x8c
V [libjvm.so+0x3accc9];; _ZN13CompileBroker25invoke_compiler_on_methodEP11CompileTask+0x4c9
V [libjvm.so+0x3ac0df];; _ZN13CompileBroker20compiler_thread_loopEv+0x55f
V [libjvm.so+0x9eb4b3];; _Z21compiler_thread_entryP10JavaThreadP6Thread+0x13
V [libjvm.so+0x9e0915];; _ZN10JavaThread17thread_main_innerEv+0xd5
V [libjvm.so+0x9e07dd];; _ZN10JavaThread3runEv+0xfd
V [libjvm.so+0x85faa6];; _Z10java_startP6Thread+0x166
Current CompileTask:
C2: 27% !b javasoft.sqe.tests.api.java.io.LineNumberInputStream.MarkResetTests.LineNumberInputStream2009()Ljavasoft/sqe/harness/Status; @ 47 (604 bytes)
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/tmp/jprt-jprtadm/P1/B/230701.kvn/source/src/share/vm/opto/loopnode.hpp:634), pid=20237, tid=1086507360
# Error: assert(n != __null,"Bad immediate dominator info.")
#
# Java VM: OpenJDK 64-Bit Server VM (14.0-b01-2008-07-16-230701.kvn.6723160-fastdebug compiled mode linux-amd64 )
# If you would like to submit a bug report, please visit:
# http://java.sun.com/webapps/bugreport/crash.jsp
#
--------------- T H R E A D ---------------
Current thread (0x0000002abee93800): JavaThread "CompilerThread1" daemon [_thread_in_native, id=20251, stack(0x0000000040b2c000,0x0000000040c2d000)]
Stack: [0x0000000040b2c000,0x0000000040c2d000], sp=0x0000000040c25b50, free space=998k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0xa4e622];; _ZN7VMError14report_and_dieEv+0x262
V [libjvm.so+0x4071fe];; _Z24report_assertion_failurePKciS0_+0x6e
V [libjvm.so+0x77f109];; _ZNK14PhaseIdealLoop14idom_no_updateEP4Node+0xd9
V [libjvm.so+0x792fb0];; _ZN14PhaseIdealLoop20build_loop_late_postEP4NodePKS_+0x230
V [libjvm.so+0x7929ca];; _ZN14PhaseIdealLoop15build_loop_lateER9VectorSetR9Node_ListR10Node_StackPKS_+0xda
V [libjvm.so+0x78c7c3];; _ZN14PhaseIdealLoopC1ER12PhaseIterGVNPKS_b+0x8c3
V [libjvm.so+0x3a111a];; _ZN7Compile8OptimizeEv+0x1ea
V [libjvm.so+0x39c2ad];; _ZN7CompileC1EP5ciEnvP10C2CompilerP8ciMethodibb+0x8fd
V [libjvm.so+0x2cda6c];; _ZN10C2Compiler14compile_methodEP5ciEnvP8ciMethodi+0x8c
V [libjvm.so+0x3accc9];; _ZN13CompileBroker25invoke_compiler_on_methodEP11CompileTask+0x4c9
V [libjvm.so+0x3ac0df];; _ZN13CompileBroker20compiler_thread_loopEv+0x55f
V [libjvm.so+0x9eb4b3];; _Z21compiler_thread_entryP10JavaThreadP6Thread+0x13
V [libjvm.so+0x9e0915];; _ZN10JavaThread17thread_main_innerEv+0xd5
V [libjvm.so+0x9e07dd];; _ZN10JavaThread3runEv+0xfd
V [libjvm.so+0x85faa6];; _Z10java_startP6Thread+0x166
Current CompileTask:
C2: 27% !b javasoft.sqe.tests.api.java.io.LineNumberInputStream.MarkResetTests.LineNumberInputStream2009()Ljavasoft/sqe/harness/Status; @ 47 (604 bytes)
Attachments
Issue Links
- backported by
-
JDK-2172722 nsk/stress/jck12a/jck12a010 assert(n != __null,"Bad immediate dominator info.")
- Resolved
-
JDK-2177201 nsk/stress/jck12a/jck12a010 assert(n != __null,"Bad immediate dominator info.")
- Closed
- relates to
-
JDK-6723160 Nightly failure: Error: meet not symmetric
- Closed