6726999: nsk/stress/jck12a/jck12a010 assert(n != null,"Bad immediate dominator info.")

Escape Analysis fixes.

Reviewed-by: never, rasbold